2000-04-11  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* symbols.c (scm_sym2vcell, scm_sym2ovcell_soft, scm_sym2ovcell,
	scm_intern_obarray_soft, scm_sysintern0,
	scm_string_to_obarray_symbol, scm_intern_symbol,
	scm_unintern_symbol, scm_symbol_binding, scm_symbol_interned_p,
	scm_symbol_bound_p, scm_symbol_set_x):  Don't use C operators to
	compare SCM values.

2000-04-11  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.c (scm_quotient, scm_modulo):  Reordered to handle the
	case of immediate numbers parameters first.  Also, only use
	decoded numbers for numerical comparison.
	
2000-04-10  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* objects.h: Don't redeclare scm_call_generic_0 and
	scm_apply_generic.  (Thanks to Tal Tversky.)

2000-04-10  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* hash.c (scm_hasher):  Use symbolic names for the tc3 constants.
	Unpack SCM value to use it as a switch parameter.  Don't cast SCM
	values to int values.

2000-04-10  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* coop.c (mother): Handled EINTR (the wait has been interrupted by
	a signal).

2000-04-07  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* __scm.h (SCM_WTA_DISPATCH_[012n]):  To test whether a SCM value
	contains a raw zero value it has to be unpacked.

	* debug.c (with_traps_inner, scm_with_traps):  Passing SCM values
	via void * requires unpacking / packing.

	* stacks.h (SCM_STACKP):  Remove unnecessary SCM_NIMP test and use
	SCM_EQ_P to compare SCM values.

	* stacks.h (SCM_FRAME_VOID_P, SCM_FRAME_REAL_P, SCM_FRAME_PROC_P,
	SCM_FRAME_EVAL_ARGS_P, SCM_FRAME_OVERFLOW_P):  Remove unnecessary
	call to SCM_UNPACK.

	* tags.h (SCM_NECONSP):  Define in terms of SCM_ECONSP

	* tags.h (SCM_ECONSP):  Clarify the test for glocs.  This is still
	quite ugly.

2000-04-05  Michael Livshin  <mlivshin@bigfoot.com>

	* async.[ch]: unexpose low-level async access macros (thanks to
 	Dirk Herrmann).

	* validate.h: move async validation macros to async.c (nobody else